--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,8 @@ body{
     background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
 
-.alert-exit-active {
+/* .alert-exit-active {
     opacity: 0;
     transform: scale(0.9);
     transition: opacity 300ms, transform 300ms;
-}
+} */
