--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,21 @@ body{
   animation: fadeInAnime 0.5s ease;
 }
 
+.fade-out {
+  animation: fadeOutAnime 0.5s ease;
+}
+
+@keyframes fadeOutAnime {
+  from {
+    opacity: 1;
+    transform: scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: scale(0.98);
+  }
+}
+
 @keyframes fadeInAnime {
   from {
     opacity: 0;
