--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,3 +54,12 @@ body{
     transform: translateY(0);
   }
 }
+
+/* Contentスクロールバー非表示 */
+#content {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE, Edge */
+}
+#content::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
